@@ -31,32 +31,29 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 public class WikitextUtilsTest
 {
-    private static Wiki testWiki;
-    
-    /**
-     *  Initialize wiki objects.
-     *  @throws Exception if a network error occurs
-     */
-    @BeforeAll
-    public static void setUpClass() throws Exception
-    {
-        testWiki = Wiki.newSession("test.wikipedia.org");
-        testWiki.setMaxLag(-1);
-    }
-    
     @Test
     public void parseWikilink()
     {
-        assertEquals(Arrays.asList("Link", "Link"), WikitextUtils.parseWikilink("[[ Link ]]"));
-        assertEquals(Arrays.asList("Link", "Link"), WikitextUtils.parseWikilink("[[:Link]]"));
-        assertEquals(Arrays.asList("Link", "Description"), WikitextUtils.parseWikilink("[[ Link | Description ]]"));
-        assertEquals(Arrays.asList("Link", "Description"), WikitextUtils.parseWikilink("[[:Link|Description]]"));
+        assertEquals(List.of("Link", "Link"), WikitextUtils.parseWikilink("[[ Link ]]"));
+        assertEquals(List.of("Link", "Link"), WikitextUtils.parseWikilink("[[:Link]]"));
+        assertEquals(List.of("Link", "Description"), WikitextUtils.parseWikilink("[[ Link | Description ]]"));
+        assertEquals(List.of("Link", "Description"), WikitextUtils.parseWikilink("[[:Link|Description]]"));
     }
     
     @Test
     public void addTableRow()
     {
-        List<String> cells = Arrays.asList("A", "B", "C");
+        List<String> cells = List.of("A", "B", "C");
         assertEquals("|-\n| A || B || C\n", WikitextUtils.addTableRow(cells));
+    }
+    
+    @Test
+    public void removeComments()
+    {
+        assertEquals("A  B",        WikitextUtils.removeComments("A <!-- comment --> B"));
+        assertEquals("Blah ",       WikitextUtils.removeComments("Blah <!-- Unbalanced comment"));
+        assertEquals("A  B  C",     WikitextUtils.removeComments("A <!-- Two --> B <!-- Comments --> C"));
+        assertEquals("A  end2 -->", WikitextUtils.removeComments("A <!-- Two ends --> end2 -->"));
+        assertEquals("-->End at 0", WikitextUtils.removeComments("-->End at 0<!--"));
     }
 }
